History of this buildout
========================

5.1.4 (unreleased)
------------------

- Nothing changed yet.


5.1.3 (2015-04-01)
------------------

- Add note in ZEST_RELEASE_NOTES.txt about stopping memmon before
  doing an upgrade.
  [maurits]


5.1.2 (2015-04-01)
------------------

- Set memmonlimit to 1750 MB everywhere.
  Differences may be in order, but are too irritating.
  [maurits]


5.1.1 (2015-04-01)
------------------

- Increase memmonlimit to 1750MB.  It just restarts far too often.
  Hopefully our recent changes help.
  [maurits]

- Use progress handler in reindex upgrade step.  Hopefully avoids
  MemoryError.
  [maurits]


5.1.0 (2015-04-01)
------------------

- Start using NFS for shared blob storage.  Use a script to migrate to
  this setup.  See ZEST_RELEASE_NOTES.txt.
  [maurits]

- Upgrade step: reindex object_provides index.
  [maurits]

- Use blob image files for our custom content types.
  [maurits]

- AnnualReport and Project: use blob file.
  [maurits]

- Remove all traces of maildrop.
  [maurits]

- Add Pillow 2.7.0 egg.
  [maurits]

- Update various minor versions.
  [maurits]

- Plone 4.2.7.
  [maurits]

- Update RelStorage, psycopg2 and related packages to latest versions.
  [maurits]

- Digibib: do not get project objects.  Filter the projects based on
  the catalog metadata.  Do the same for meetings.
  [maurits]

- Meeting archive: no longer use getObject.
  [maurits]

- Add catalog metadata: getAdvisory_date, getAssigned_groups,
  getInvited_groups, getProject_number, getResponsible_group,
  project_numbers.
  [maurits]


5.0.30 (2014-10-09)
-------------------

- Fix ``UnboundLocalError: local variable 'themes' referenced before
  assignment``.  This is when exporting the subscribers of the MREvent
  contenttype, via the 'export to excel' tab.
  [maurits]


5.0.29 (2014-10-07)
-------------------

- Make sure the PFG quickedit form appears next to the toolbox,
  instead of being pushed below it.
  [maurits]

