@@ -4,7 +4,8 @@ History of this buildout
 5.1.4 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Log a bit more while migrating.
+  [maurits]
 
 
 5.1.3 (2015-04-01)
